Bug 1360128 - Pass values from font-variation-settings through to the harfbuzz font object, so that shaping can take variations into account. r=jrmuizel